plugins {
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group = 'com.ntews'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2023.0.0")
}

dependencies {
    // Spring Boot Web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    
    // Spring Boot Data MongoDB
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    
    // For handling the JSON forwarding to your AI Engine
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    
    // Standard JSON mapping
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    
    // Lombok for cleaner code
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    // Jakarta annotations for @PostConstruct (Spring Boot 3.x)
    implementation 'jakarta.annotation:jakarta.annotation-api'
    
    // WebSocket client for Bluesky Jetstream and service communication
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    
    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
